# freecad-slic3r-tools

./: .gitignore  CMakeLists.txt  Init.py  InitGui.py  README.md  Slcr.dox  Slcr.py  SlcrDialogUtil.py  SlcrDoc.py  SlcrGui.py  SlcrResources3.py  build.py  package.xml
Resources/: Slcr.qrc
Resources/ui/: slcr-prefs.ui
